--- a/app/signup-form.component.html
+++ b/app/signup-form.component.html
@@ -7,9 +7,19 @@
             class="form-control"
             ngControl="username"
             #username="ngForm">
-            <div class="alert alert-danger"
-                *ngIf="!username.valid">
-                Username is required
+            <div *ngIf="username.touched && username.errors">
+                <div class="alert alert-danger"
+                    *ngIf="username.errors.required">
+                    Username is required
+                </div>
+                <div class="alert alert-danger"
+                    *ngIf="username.errors.cannotContainSpaces">
+                    Username cannot contain space
+                </div>
+                <div class="alert alert-danger"
+                    *ngIf="username.errors.shouldBeUnique">
+                    Username not available
+                </div>
             </div>
     </div>
     <div class="form-group">
